# TTS_Demo

./: CMakeLists.txt  README.md  configuration.ini
include/: AppConfiguration.hpp  zmq.hpp
linux_aisound_exp1218_5be7bc2b/samples/tts_offline_sample/: tts_offline_sample.c
make/gnu/: sanitizers.cmake
src/: CMakeLists.txt  Main.cpp
src/applications/: AppInstance.cpp  AppInstance.hpp  ClientReceiver.cpp  ClientReceiver.hpp  ITTSService.hpp  KDTTSService.cpp  KDTTSService.hpp  ZmqReceiver.cpp  ZmqReceiver.hpp
src/configurations/: AppConfiguration.hpp  ConfigurationLoader.cpp  ConfigurationLoader.hpp
src/logger/: CMakeLists.txt
src/logger/include/logger/: Logger.hpp  LoggerConfiguration.hpp  LoggerEnabled.hpp  LoggerFwd.hpp  LoggerImpl.hpp  LoggerPriorityTags.hpp
src/logger/src/: Logger.cpp  LoggerConfiguration2stdout.cpp
src/player/: AlsaPlayer.cpp  AlsaPlayer.hpp  CodeConverter.cpp  CodeConverter.hpp  IPlayer.hpp  SystemPlayer.cpp  SystemPlayer.hpp
src/socket/: ClientSocket.cpp  ClientSocket.hpp  IDataListener.hpp  ISocketSysCall.hpp  SocketSysCall.cpp  SocketSysCall.hpp
src/timer/: CMakeLists.txt
src/timer/include/: DefaultTimerService.hpp  IOService.hpp  Timer.hpp  TimerIdGenerator.hpp  TimerService.hpp
src/timer/src/: DefaultTimerService.cpp  IOService.cpp
tts/: Makefile  tts_offline_sample.c
